[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/textures/Prototype/texture_09.png" type="Texture" id=1]
[ext_resource path="res://scripts/Rotate.gd" type="Script" id=2]
[ext_resource path="res://scenes/GunPartList.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/LightFlicker.gd" type="Script" id=4]
[ext_resource path="res://scripts/GunGenDemo2.gd" type="Script" id=5]
[ext_resource path="res://scripts/CustomizationOptions.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=1]
flags_world_triplanar = true
albedo_texture = ExtResource( 1 )
uv1_triplanar = true

[sub_resource type="Environment" id=2]

[node name="GunGenDemo2" type="Spatial"]
script = ExtResource( 5 )
node = NodePath("Mount")
physics_state = 1

[node name="GunPartList" parent="." instance=ExtResource( 3 )]

[node name="Mount" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CSGBox" type="CSGBox" parent="."]
use_collision = true
collision_layer = 3
width = 20.0
height = 0.1
depth = 20.0
material = SubResource( 1 )

[node name="CameraAxis" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="CameraBoom" type="SpringArm" parent="CameraAxis"]
transform = Transform( 0.998742, 0.0168641, 0.0472205, -0.0254083, 0.982095, 0.186661, -0.0432272, -0.187626, 0.981289, 0, 0, 0 )
collision_mask = 2
spring_length = 1.357

[node name="Camera" type="Camera" parent="CameraAxis/CameraBoom"]
transform = Transform( 0.981077, 0, 0.193618, 0, 1, 0, -0.193618, 0, 0.981077, 0, 0, 0 )
environment = SubResource( 2 )
current = true
fov = 52.8

[node name="SpotLight" type="SpotLight" parent="CameraAxis/CameraBoom/Camera"]
transform = Transform( 1, 0, 0, 0, 0.995109, 0.0987814, 7.45058e-09, -0.0987814, 0.995109, -1.49012e-08, 0.319, 2.98023e-08 )
light_energy = 0.77
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_left = 55.0
margin_top = 33.0
margin_right = 299.0
margin_bottom = -37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer"]
margin_top = 173.0
margin_right = 13.0
margin_bottom = 357.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
text = "W
E
A
P
O
N

B
O
D
Y"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 17.0
margin_right = 33.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodySlider" type="VSlider" parent="Control/HBoxContainer/VBoxContainer2"]
margin_right = 16.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 37.0
margin_right = 244.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="broadcast_serial_no" from="." to="Control" method="_on_GunGenDemo2_broadcast_serial_no"]
[connection signal="clear" from="." to="Control" method="_on_GunGenDemo2_clear"]
[connection signal="update_weapon" from="Control" to="." method="_on_Control_update_weapon"]
[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer2/BodySlider" to="Control" method="_on_BodySlider_value_changed"]
